--- a/Assets/style.css
+++ b/Assets/style.css
@@ -7,6 +7,8 @@ body {
     font-size: 18px;
     line-height: 125%;
     background-color: transparent;
+
+
   }  
   
   /*Header*/
@@ -30,7 +32,7 @@ header a {
 h2{
     color: red;
     font-size: 25px;
-    background: lightblue;
+    background:white;
     opacity: 0.75;
 }
 
@@ -74,12 +76,23 @@ section .container {
   } */
 
 .url_wrapper {
-    background-color: yellow;
-    background: lightblue;
+    /* background-color: yellow;
+    background: lightblue; */
+    background:white;
     opacity: 0.75;
     font-family: Georgia, “Times New Roman”, Times, serif;
     font-size: 20px;
   }
+
+
+#dataL{
+    background:white;
+    opacity: 0.75;
+    font-family: Georgia, “Times New Roman”, Times, serif;
+    font-size: 20px;
+}
+
+
 
 /* Wrapper for content*/
 .content {
@@ -95,7 +108,7 @@ p {
     margin: 0%;
     font-family: Georgia, “Times New Roman”, Times, serif;
     font-size: 20px;
-    background: lightblue;
+    background:white;
     opacity: 0.75;
     color: rgb(129, 22, 67);
   }
